# rusty-lcu

./: Cargo.toml  README.md  build.rs
examples/: current_summoner.rs  list_endpoints.rs
schema/: README.md
scripts/: update-swagger.ps1  update-swagger.sh
src/: client.rs  credentials.rs  error.rs  events.rs  lib.rs
