[package]
name = "rusty-lcu"
version = "0.1.0"
edition = "2024"
description = "Generated Rust client helpers for the League Client Update API"
license = "MIT"

[dependencies]
base64 = "0.22"
futures-util = "0.3"
http = "1"
native-tls = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38.4"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "process", "rt", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
url = "2"
urlencoding = "2"

[build-dependencies]
heck = "0.5"
serde_json = "1"
